[package]
name = "hashsig-py"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"

[lib]
name = "hashsig_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }

# Hash-sig dependency
hashsig = { git = "https://github.com/b-wagn/hash-sig", branch = "main" }

# Additional dependencies from hash-sig
rand = "0.8"
sha3 = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"