[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hashsig"
version = "0.1.0"
description = "Python bindings for the hash-sig library - hash-based signatures using tweakable hash functions"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
keywords = ["cryptography", "signatures", "hash-based", "post-quantum", "xmss"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/b-wagn/hash-sig"
Repository = "https://github.com/b-wagn/hash-sig"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hashsig_py"